crates/ktsense-cli/tests/snapshots/outline_snapshots__md__tiny_app__build_gradle_kts.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## build.gradle.kts

No public declarations.
