crates/ktsense-cli/tests/snapshots/outline_snapshots__md__tiny_app__src_main_kotlin_app_domain_Repository_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## src/main/kotlin/app/domain/Repository.kt

package app.domain

```kotlin
interface Repository<out T> {
    val size: Int
    fun findById(id: Long): T?
    fun findAll(page: Int = 0, pageSize: Int = 20): List<T>
    fun isEmpty(): Boolean
}
interface MutableRepository<T> : Repository<T> {
    suspend fun save(entity: T): Outcome<T>
    suspend fun deleteById(id: Long): Boolean
    fun saveAll(entities: Collection<T>): Int
}
interface UserRepository : MutableRepository<User> {
    fun findByEmail(email: String): User?
    fun findMatching(predicate: UserPredicate): List<User>
}
```
