crates/ktsense-cli/tests/snapshots/outline_snapshots__md__tiny_app__src_main_kotlin_app_domain_User_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## src/main/kotlin/app/domain/User.kt

package app.domain

```kotlin
data class User(val id: UserId, val email: String, val displayName: String? = null, val roles: Set<Role> = emptySet())
value class UserId(val raw: Long)
typealias UserPredicate = (User) -> Boolean
const val ANONYMOUS_DISPLAY_NAME: String
val defaultPredicate: UserPredicate
```
1 annotation hidden; pass --annotations to include them.
