crates/ktsense-cli/tests/snapshots/outline_snapshots__md__tiny_app__src_main_kotlin_app_domain_annotations_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## src/main/kotlin/app/domain/annotations.kt

package app.domain

```kotlin
annotation class Audited(val category: String = "default")
annotation class Sanitized
annotation class RetryOn(val exception: String)
```
5 annotations hidden; pass --annotations to include them.
