crates/ktsense-cli/tests/snapshots/outline_snapshots__md__tiny_app__src_main_kotlin_app_service_InMemoryUserRepository_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## src/main/kotlin/app/service/InMemoryUserRepository.kt

package app.service

```kotlin
class InMemoryUserRepository private constructor(private val backing: MutableMap<Long, User>) : UserRepository, ReadOnlyView by MapView(backing) {
    constructor()
    constructor(seed: Collection<User>)
    override val size: Int
    override fun findById(id: Long): User?
    override fun findAll(page: Int, pageSize: Int): List<User>
    override fun findByEmail(email: String): User?
    override fun findMatching(predicate: UserPredicate): List<User>
    override suspend fun save(entity: User): Outcome<User>
    override suspend fun deleteById(id: Long): Boolean
    override fun saveAll(entities: Collection<User>): Int
    class Stats(val reads: Long, val writes: Long)
    inner class Snapshot { val takenFrom: Int }
}
interface ReadOnlyView { fun keys(): Set<Long> }
```
4 private or internal declarations hidden; pass --private to include them.
