crates/ktsense-cli/tests/snapshots/outline_snapshots__md__tiny_app__src_main_kotlin_app_service_ServiceRegistry_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## src/main/kotlin/app/service/ServiceRegistry.kt

package app.service

```kotlin
object ServiceRegistry {
    val summary: String
    fun register(service: Service)
    fun <S : Service> find(type: Class<S>): S?
    fun startAll() /* inferred */
}
inline fun <reified T : Service> ServiceRegistry.findOrNull(): T?
fun countUsers(repo: Repository<User>): Int
```
1 private or internal declaration hidden; pass --private to include them.
