crates/ktsense-cli/tests/snapshots/outline_snapshots__md__tiny_app__src_main_kotlin_app_service_Service_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## src/main/kotlin/app/service/Service.kt

package app.service

```kotlin
interface Service {
    val name: String
    fun start()
    fun stop()
}
abstract class AbstractCachingService<K, V : Any>(protected val capacity: Int) : Service {
    abstract fun load(key: K): V?
    abstract val hitRatio: Double
    fun get(key: K): V?
    final override fun stop()
}
```
1 private or internal declaration hidden; pass --private to include them.
